@@ -1,690 +1,680 @@
 package org.bf2.admin.kafka.systemtest.plain;
 
-import io.vertx.core.Vertx;
-import io.vertx.core.http.HttpClient;
-import io.vertx.core.http.HttpClientResponse;
-import io.vertx.core.http.HttpMethod;
-import io.vertx.junit5.Checkpoint;
-import io.vertx.junit5.VertxTestContext;
-import org.apache.kafka.clients.admin.NewTopic;
-import org.apache.kafka.clients.admin.TopicDescription;
-import org.apache.kafka.common.config.ConfigResource;
-import org.bf2.admin.kafka.admin.model.Types;
-import org.bf2.admin.kafka.systemtest.bases.PlainTestBase;
-import org.bf2.admin.kafka.systemtest.enums.ReturnCodes;
-import org.bf2.admin.kafka.systemtest.utils.DynamicWait;
-import org.bf2.admin.kafka.systemtest.utils.RequestUtils;
+import io.quarkus.test.junit.QuarkusTest;
+import io.quarkus.test.junit.TestProfile;
+import io.restassured.http.ContentType;
+import org.bf2.admin.kafka.systemtest.TestPlainProfile;
+import org.bf2.admin.kafka.systemtest.deployment.KafkaUnsecuredResourceManager;
+import org.bf2.admin.kafka.systemtest.utils.TopicUtils;
+import org.eclipse.microprofile.config.Config;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtensionContext;
 import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.ValueSource;
 
-import java.net.HttpURLConnection;
 import java.time.Duration;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.Set;
+import java.util.Map;
 import java.util.UUID;
-import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
-import static org.assertj.core.api.Assertions.assertThat;
+import javax.inject.Inject;
+import javax.ws.rs.core.Response.Status;
 
-class RestEndpointTestIT extends PlainTestBase {
+import static io.restassured.RestAssured.given;
+import static org.hamcrest.Matchers.contains;
+import static org.hamcrest.Matchers.containsInAnyOrder;
+import static org.hamcrest.Matchers.empty;
+import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.notNullValue;
 
-    @Test
-    void testTopicListAfterCreation(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
-        List<NewTopic> topics = new ArrayList<>();
-        for (int i = 0; i < 2; i++) topics.add(new NewTopic(UUID.randomUUID().toString(), 1, (short) 1));
-        kafkaClient.createTopics(topics);
-        DynamicWait.waitForTopicsExists(topics.stream().map(NewTopic::name).collect(Collectors.toList()), kafkaClient);
-        HttpClient client = createHttpClient(vertx);
-        client.request(HttpMethod.GET, publishedAdminPort, "localhost", "/rest/topics")
-                .compose(req -> req.send().onSuccess(response -> {
-                    if (response.statusCode() !=  ReturnCodes.SUCCESS.code) {
-                        testContext.failNow("Status code not correct");
-                    }
-                    assertStrictTransportSecurityDisabled(response, testContext);
-                }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
-                .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
-                    assertThat(testContext.failed()).isFalse();
-                    Set<String> actualRestNames = kafkaClient.listTopics().names().get();
-                    assertThat(MODEL_DESERIALIZER.getNames(buffer)).hasSameElementsAs(actualRestNames);
-                    testContext.completeNow();
-                })));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
+@QuarkusTest
+@TestProfile(TestPlainProfile.class)
+class RestEndpointTestIT {
+
+    @Inject
+    Config config;
+
+    TopicUtils topicUtils;
+
+    @BeforeEach
+    void setup() {
+        topicUtils = new TopicUtils(config, null);
+        topicUtils.deleteAllTopics();
     }
 
     @Test
-    void testTopicListWithKafkaDown(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws InterruptedException {
-        HttpClient client = createHttpClient(vertx);
-        deployments.stopKafkaContainer();
-        client.request(HttpMethod.GET, publishedAdminPort, "localhost", "/rest/topics")
-                .compose(req -> req.send().onComplete(l -> testContext.verify(() -> {
-                    assertThat(testContext.failed()).isFalse();
-                    if (l.succeeded()) {
-                        assertThat(l.result().statusCode()).isEqualTo(ReturnCodes.KAFKA_DOWN.code);
-                    }
-                    assertStrictTransportSecurityDisabled(l.result(), testContext);
-                    testContext.completeNow();
-                })).onFailure(testContext::failNow));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
+    void testTopicListAfterCreation() {
+        List<String> topicNames = IntStream.range(0, 2)
+                .mapToObj(i -> UUID.randomUUID().toString())
+                .collect(Collectors.toList());
+
+        topicUtils.createTopics(topicNames, 1, Status.CREATED);
+
+        given()
+            .log().ifValidationFails()
+        .when()
+            .get(TopicUtils.TOPIC_COLLECTION_PATH)
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.OK.getStatusCode())
+        .assertThat()
+            .body("items.size()", equalTo(topicNames.size()))
+            .body("items.name", containsInAnyOrder(topicNames.toArray(String[]::new)));
+    }
+
+//    @Test
+//    void testTopicListWithKafkaDown(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws InterruptedException {
+//        HttpClient client = createHttpClient(vertx);
+//        deployments.stopKafkaContainer();
+//        client.request(HttpMethod.GET, publishedAdminPort, "localhost", "/rest/topics")
+//                .compose(req -> req.send().onComplete(l -> testContext.verify(() -> {
+//                    assertThat(testContext.failed()).isFalse();
+//                    if (l.succeeded()) {
+//                        assertThat(l.result().statusCode()).isEqualTo(ReturnCodes.KAFKA_DOWN.code);
+//                    }
+//                    assertStrictTransportSecurityDisabled(l.result(), testContext);
+//                    testContext.completeNow();
+//                })).onFailure(testContext::failNow));
+//        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
+//    }
+
+    @Test
+    void testTopicListWithFilter() {
+        String batchId = UUID.randomUUID().toString();
+
+        List<String> topicNames = IntStream.range(0, 10)
+                .mapToObj(i -> (i % 2 == 0 ? "-even-" : "-odd-") + i + "-")
+                .map(name -> name + batchId)
+                .collect(Collectors.toList());
+
+        String[] exepectedNames = topicNames.stream()
+                .filter(name -> name.contains("-even-"))
+                .toArray(String[]::new);
+
+        topicUtils.createTopics(topicNames, 1, Status.CREATED);
+
+        given()
+            .queryParam("filter", "even")
+            .log().ifValidationFails()
+        .when()
+            .get(TopicUtils.TOPIC_COLLECTION_PATH)
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.OK.getStatusCode())
+        .assertThat()
+            .body("items.size()", equalTo(topicNames.size() / 2))
+            .body("items.name", containsInAnyOrder(exepectedNames));
+    }
+
+    @ParameterizedTest
+    @CsvSource({
+        "1, 3", // three items on first page
+        "2, 2", // two items on second page
+    })
+    void testTopicListWithValidPagination(int page, int itemsOnPage) throws Exception {
+        int totalTopics = 5;
+        int pageSize = 3;
+        List<String> topicNames = IntStream.range(0, totalTopics)
+                .mapToObj(i -> UUID.randomUUID().toString())
+                .sorted() // API sorts by name by default
+                .collect(Collectors.toList());
+
+        int expectedStart = (page - 1) * pageSize;
+        int expectedEnd = expectedStart + pageSize;
+        List<String> expectedNames = topicNames.subList(expectedStart, Math.min(expectedEnd, topicNames.size()));
+
+        topicUtils.createTopics(topicNames, 1, Status.CREATED);
+
+        given()
+            .queryParam("size", pageSize)
+            .queryParam("page", page)
+            .log().ifValidationFails()
+        .when()
+            .get(TopicUtils.TOPIC_COLLECTION_PATH)
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.OK.getStatusCode())
+        .assertThat()
+            .body("page", equalTo(page))
+            .body("size", equalTo(pageSize))
+            .body("total", equalTo(totalTopics))
+            .body("items.size()", equalTo(itemsOnPage))
+            .body("items.name", contains(expectedNames.toArray(String[]::new)));
+    }
+
+    @ParameterizedTest
+    @ValueSource(ints = { 3, -1 })
+    void testTopicListWithInvalidPagination(int page) throws Exception {
+        int pageSize = 3;
+        List<String> topicNames = IntStream.range(0, 5)
+                .mapToObj(i -> UUID.randomUUID().toString())
+                .sorted() // API sorts by name by default
+                .collect(Collectors.toList());
+
+        topicUtils.createTopics(topicNames, 1, Status.CREATED);
+
+        given()
+            .queryParam("size", pageSize)
+            .queryParam("page", page)
+            .log().ifValidationFails()
+        .when()
+            .get(TopicUtils.TOPIC_COLLECTION_PATH)
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.BAD_REQUEST.getStatusCode());
+    }
+
+    @ParameterizedTest
+    @ValueSource(ints = { 1, 2, 3, 5 })
+    void testTopicListWithLimit(int limit) {
+        int totalTopics = 5;
+        List<String> topicNames = IntStream.range(0, totalTopics)
+                .mapToObj(i -> UUID.randomUUID().toString())
+                .sorted() // API sorts by name by default
+                .collect(Collectors.toList());
+
+        List<String> expectedNames = topicNames.subList(0, limit);
+
+        topicUtils.createTopics(topicNames, 1, Status.CREATED);
+
+        given()
+            .queryParam("limit", limit)
+            .log().ifValidationFails()
+        .when()
+            .get(TopicUtils.TOPIC_COLLECTION_PATH)
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.OK.getStatusCode())
+        .assertThat()
+            .body("offset", equalTo(0)) // default
+            .body("limit", equalTo(limit))
+            .body("count", equalTo(limit))
+            .body("items.size()", equalTo(limit))
+            .body("items.name", contains(expectedNames.toArray(String[]::new)));
+    }
+
+    @ParameterizedTest
+    @ValueSource(ints = { 0, 1, 3, 4 })
+    void testTopicListWithOffset(int offset) {
+        int totalTopics = 3;
+        List<String> topicNames = IntStream.range(0, totalTopics)
+                .mapToObj(i -> UUID.randomUUID().toString())
+                .sorted() // API sorts by name by default
+                .collect(Collectors.toList());
+
+        String[] expectedNames = offset < totalTopics ?
+            topicNames.subList(offset, totalTopics).toArray(String[]::new) :
+            null;
+
+        topicUtils.createTopics(topicNames, 1, Status.CREATED);
+
+        var response =
+            given()
+                .queryParam("offset", offset)
+                .log().ifValidationFails()
+            .when()
+                .get(TopicUtils.TOPIC_COLLECTION_PATH)
+            .then()
+                .log().ifValidationFails();
+
+        if (offset > totalTopics) {
+            response.statusCode(Status.BAD_REQUEST.getStatusCode());
+        } else {
+            response.assertThat()
+                .statusCode(Status.OK.getStatusCode())
+            .assertThat()
+                .body("offset", equalTo(offset))
+                .body("limit", equalTo(10)) // default
+                .body("count", equalTo(totalTopics - offset))
+                .body("items.size()", equalTo(totalTopics - offset))
+                .body("items.name", expectedNames == null ? empty() : contains(expectedNames));
+        }
     }
 
     @Test
-    void testTopicListWithFilter(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
-        List<NewTopic> topics = new ArrayList<>();
-        for (int i = 0; i < 2; i++) topics.add(new NewTopic(UUID.randomUUID().toString(), 1, (short) 1));
-        kafkaClient.createTopics(topics);
-        DynamicWait.waitForTopicsExists(topics.stream().map(NewTopic::name).collect(Collectors.toList()), kafkaClient);
+    void testTopicListWithFilterNone() {
+        List<String> topicNames = IntStream.range(0, 2)
+                .mapToObj(i -> UUID.randomUUID().toString())
+                .collect(Collectors.toList());
 
-        HttpClient client = createHttpClient(vertx);
-        client.request(HttpMethod.GET, publishedAdminPort, "localhost", "/rest/topics?filter=test-topic.*")
-                .compose(req -> req.send().onSuccess(response -> {
-                    if (response.statusCode() !=  ReturnCodes.SUCCESS.code) {
-                        testContext.failNow("Status code not correct");
-                    }
-                    assertStrictTransportSecurityDisabled(response, testContext);
-                }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
-                .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
-                    assertThat(testContext.failed()).isFalse();
-                    Set<String> actualRestNames = kafkaClient.listTopics().names().get();
-                    assertThat(MODEL_DESERIALIZER.getNames(buffer)).isEqualTo(actualRestNames.stream().filter(name -> name.contains("test-topic")).collect(Collectors.toSet()));
-                    testContext.completeNow();
-                })));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
+        topicUtils.createTopics(topicNames, 1, Status.CREATED);
+
+        given()
+            .queryParam("filter", "zcfsada.*")
+            .log().ifValidationFails()
+        .when()
+            .get(TopicUtils.TOPIC_COLLECTION_PATH)
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.OK.getStatusCode())
+        .assertThat()
+            .body("page", equalTo(1))
+            .body("size", equalTo(10))
+            .body("total", equalTo(0))
+            .body("items.size()", equalTo(0));
     }
 
-    @ParameterizedTest(name = "testTopicListWithPagination-{0}")
-    @ValueSource(ints = {1, 2, 3})
-    void testTopicListWithPagination(int page, Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
-        List<NewTopic> topics = new ArrayList<>();
-        for (int i = 0; i < 5; i++) topics.add(new NewTopic(UUID.randomUUID().toString(), 1, (short) 1));
-        kafkaClient.createTopics(topics);
-        DynamicWait.waitForTopicsExists(topics.stream().map(NewTopic::name).collect(Collectors.toList()), kafkaClient);
+    @ParameterizedTest
+    @ValueSource(ints = { 1, 2, 3, 5 })
+    void testTopicListWithSize(int size) {
+        int totalTopics = 3;
+        List<String> topicNames = IntStream.range(0, totalTopics)
+                .mapToObj(i -> UUID.randomUUID().toString())
+                .sorted() // API sorts by name by default
+                .collect(Collectors.toList());
 
-        HttpClient client = createHttpClient(vertx);
-        client.request(HttpMethod.GET, publishedAdminPort, "localhost", "/rest/topics?size=3&page=" + page)
-                .compose(req -> req.send().onSuccess(response -> {
-                    // we want to get page 3 of 5 topics. The page size is 3, so we have just 2 pages
-                    if (page == 3) {
-                        if (response.statusCode() != ReturnCodes.FAILED_REQUEST.code) {
-                            testContext.failNow("Status code not correct");
-                        }
-                    } else if (response.statusCode() != ReturnCodes.SUCCESS.code) {
-                        testContext.failNow("Status code not correct");
-                    }
-                    assertStrictTransportSecurityDisabled(response, testContext);
-                }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
-                .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
-                    assertThat(testContext.failed()).isFalse();
-                    // 5 topic, size of page is 3. First page should have 3 topic, second page just 2
-                    if (page == 1) {
-                        assertThat(MODEL_DESERIALIZER.getNames(buffer).size()).isEqualTo(3);
-                    }
-                    if (page == 2) {
-                        assertThat(MODEL_DESERIALIZER.getNames(buffer).size()).isEqualTo(2);
-                    }
-                    testContext.completeNow();
-                })));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
+        List<String> expectedNames = topicNames.subList(0, Math.min(topicNames.size(), size));
+
+        topicUtils.createTopics(topicNames, 1, Status.CREATED);
+
+        given()
+            .queryParam("size", size)
+            .log().ifValidationFails()
+        .when()
+            .get(TopicUtils.TOPIC_COLLECTION_PATH)
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.OK.getStatusCode())
+        .assertThat()
+            .body("page", equalTo(1)) // default
+            .body("size", equalTo(size))
+            .body("total", equalTo(totalTopics))
+            .body("items.size()", equalTo(expectedNames.size()))
+            .body("items.name", contains(expectedNames.toArray(String[]::new)));
     }
 
-    @ParameterizedTest(name = "testTopicListWithLimit-{0}")
-    @ValueSource(ints = {1, 2, 3, 5})
-    void testTopicListWithLimit(int limit, Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
-        List<NewTopic> topics = new ArrayList<>();
-        for (int i = 0; i < 3; i++) topics.add(new NewTopic(UUID.randomUUID().toString(), 1, (short) 1));
-        kafkaClient.createTopics(topics);
-        DynamicWait.waitForTopicsExists(topics.stream().map(NewTopic::name).collect(Collectors.toList()), kafkaClient);
+    @ParameterizedTest
+    @ValueSource(ints = { -1, 0, 1, 3, 50 })
+    void testTopicListWithPage(int page) throws Exception {
+        int totalTopics = 3;
+        List<String> topicNames = IntStream.range(0, totalTopics)
+                .mapToObj(i -> UUID.randomUUID().toString())
+                .sorted() // API sorts by name by default
+                .collect(Collectors.toList());
 
-        HttpClient client = createHttpClient(vertx);
-        client.request(HttpMethod.GET, publishedAdminPort, "localhost", "/rest/topics?limit=" + limit)
-                .compose(req -> req.send().onSuccess(response -> {
-                    if (response.statusCode() !=  ReturnCodes.SUCCESS.code) {
-                        testContext.failNow("Status code not correct");
-                    }
-                    assertStrictTransportSecurityDisabled(response, testContext);
-                }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
-                .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
-                    assertThat(testContext.failed()).isFalse();
-                    assertThat(MODEL_DESERIALIZER.getNames(buffer).size()).isEqualTo(Math.min(limit, 3));
-                    testContext.completeNow();
-                })));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
-    }
+        topicUtils.createTopics(topicNames, 1, Status.CREATED);
 
-    @ParameterizedTest(name = "testTopicListWithOffset-{0}")
-    @ValueSource(ints = {0, 1, 3, 4})
-    void testTopicListWithOffset(int offset, Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
-        LOGGER.info("Display name: " + extensionContext.getDisplayName());
-        List<NewTopic> topics = new ArrayList<>();
-        for (int i = 0; i < 3; i++) topics.add(new NewTopic(UUID.randomUUID().toString(), 1, (short) 1));
-        kafkaClient.createTopics(topics);
-        DynamicWait.waitForTopicsExists(topics.stream().map(NewTopic::name).collect(Collectors.toList()), kafkaClient);
+        var response =
+            given()
+                .queryParam("page", page)
+                .log().ifValidationFails()
+            .when()
+                .get(TopicUtils.TOPIC_COLLECTION_PATH)
+            .then()
+                .log().ifValidationFails();
 
-        HttpClient client = createHttpClient(vertx);
-        client.request(HttpMethod.GET, publishedAdminPort, "localhost", "/rest/topics?offset=" + offset)
-                .compose(req -> req.send().onSuccess(response -> {
-                    if ((response.statusCode() !=  ReturnCodes.SUCCESS.code && offset != 4)
-                            || (response.statusCode() !=  ReturnCodes.FAILED_REQUEST.code && offset == 4)) {
-                        testContext.failNow("Status code not correct");
-                    }
-                    assertStrictTransportSecurityDisabled(response, testContext);
-                }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
-                .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
-                    assertThat(testContext.failed()).isFalse();
-                    if (offset != 4) {
-                        assertThat(MODEL_DESERIALIZER.getNames(buffer).size()).isEqualTo(3 - offset);
-                    }
-                    testContext.completeNow();
-                })));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
+        if (page != 1) {
+            response
+                .statusCode(Status.BAD_REQUEST.getStatusCode())
+            .assertThat()
+                .body("code", equalTo(Status.BAD_REQUEST.getStatusCode()))
+                .body("error_message", notNullValue());
+        } else {
+            response
+                .statusCode(Status.OK.getStatusCode())
+            .assertThat()
+                .body("page", equalTo(page))
+                .body("size", equalTo(10)) // default
+                .body("total", equalTo(totalTopics))
+                .body("items.size()", equalTo(totalTopics))
+                .body("items.name", contains(topicNames.toArray(String[]::new)));
+        }
     }
 
     @Test
-    void testTopicListWithFilterNone(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
-        List<NewTopic> topics = new ArrayList<>();
-        for (int i = 0; i < 2; i++) topics.add(new NewTopic(UUID.randomUUID().toString(), 1, (short) 1));
-        kafkaClient.createTopics(topics);
-        DynamicWait.waitForTopicsExists(topics.stream().map(NewTopic::name).collect(Collectors.toList()), kafkaClient);
-
-        HttpClient client = createHttpClient(vertx);
-        client.request(HttpMethod.GET, publishedAdminPort, "localhost", "/rest/topics?filter=zcfsada.*")
-                .compose(req -> req.send().onSuccess(response -> {
-                    if (response.statusCode() !=  ReturnCodes.SUCCESS.code) {
-                        testContext.failNow("Status code not correct");
-                    }
-                    assertStrictTransportSecurityDisabled(response, testContext);
-                }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
-                .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
-                    assertThat(testContext.failed()).isFalse();
-                    assertThat(MODEL_DESERIALIZER.getNames(buffer).size()).isEqualTo(0);
-                    testContext.completeNow();
-                })));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
-    }
-
-    @ParameterizedTest(name = "testTopicListWithSize-{0}")
-    @ValueSource(ints = {1, 2, 3, 5})
-    void testTopicListWithSize(int size, Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
-        List<NewTopic> topics = new ArrayList<>();
-        for (int i = 0; i < 3; i++) topics.add(new NewTopic(UUID.randomUUID().toString(), 1, (short) 1));
-        kafkaClient.createTopics(topics);
-        DynamicWait.waitForTopicsExists(topics.stream().map(NewTopic::name).collect(Collectors.toList()), kafkaClient);
-
-        HttpClient client = createHttpClient(vertx);
-        client.request(HttpMethod.GET, publishedAdminPort, "localhost", "/rest/topics?size=" + size)
-                .compose(req -> req.send().onSuccess(response -> {
-                    if (response.statusCode() !=  ReturnCodes.SUCCESS.code) {
-                        testContext.failNow("Status code not correct");
-                    }
-                    assertStrictTransportSecurityDisabled(response, testContext);
-                }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
-                .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
-                    assertThat(testContext.failed()).isFalse();
-                    assertThat(MODEL_DESERIALIZER.getNames(buffer).size()).isEqualTo(Math.min(size, 3));
-                    testContext.completeNow();
-                })));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
-    }
-
-    @ParameterizedTest(name = "testTopicListWithPage-{0}")
-    @ValueSource(ints = {1, 3, 4})
-    void testTopicListWithPage(int page, Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
-        List<NewTopic> topics = new ArrayList<>();
-        for (int i = 0; i < 3; i++) topics.add(new NewTopic(UUID.randomUUID().toString(), 1, (short) 1));
-        kafkaClient.createTopics(topics);
-        DynamicWait.waitForTopicsExists(topics.stream().map(NewTopic::name).collect(Collectors.toList()), kafkaClient);
-
-        HttpClient client = createHttpClient(vertx);
-        client.request(HttpMethod.GET, publishedAdminPort, "localhost", "/rest/topics?page=" + page)
-                .compose(req -> req.send().onSuccess(response -> {
-                    if ((response.statusCode() !=  ReturnCodes.SUCCESS.code && page == 1)
-                            || (response.statusCode() !=  ReturnCodes.FAILED_REQUEST.code && page != 1)) {
-                        testContext.failNow("Status code not correct");
-                    }
-                    assertStrictTransportSecurityDisabled(response, testContext);
-                }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
-                .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
-                    assertThat(testContext.failed()).isFalse();
-                    if (page == 1) {
-                        assertThat(MODEL_DESERIALIZER.getNames(buffer).size()).isEqualTo(3);
-                    }
-                    testContext.completeNow();
-                })));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
-    }
-
-    @Test
-    void testDescribeSingleTopic(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
+    void testDescribeSingleTopic() throws Exception {
         final String topicName = UUID.randomUUID().toString();
-        kafkaClient.createTopics(Collections.singletonList(
-                new NewTopic(topicName, 2, (short) 1)
-        ));
+        final int numPartitions = 2;
+        topicUtils.createTopics(List.of(topicName), numPartitions, Status.CREATED);
 
-        DynamicWait.waitForTopicExists(topicName, kafkaClient);
+        given()
+            .log().ifValidationFails()
+        .when()
+            .get(TopicUtils.TOPIC_PATH, topicName)
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.OK.getStatusCode())
+        .assertThat()
+            .body("name", equalTo(topicName))
+            .body("partitions.size()", equalTo(numPartitions));
+    }
 
-        String queryReq = "/rest/topics/" + topicName;
-        createHttpClient(vertx).request(HttpMethod.GET, publishedAdminPort, "localhost", queryReq)
-                .compose(req -> req.send().onSuccess(response -> {
-                    if (response.statusCode() !=  ReturnCodes.SUCCESS.code) {
-                        testContext.failNow("Status code not correct");
-                    }
-                    assertStrictTransportSecurityDisabled(response, testContext);
-                }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
-                .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
-                    assertThat(testContext.failed()).isFalse();
-                    Types.Topic topic = MODEL_DESERIALIZER.deserializeResponse(buffer, Types.Topic.class);
-                    assertThat(topic.getPartitions().size()).isEqualTo(2);
-                    testContext.completeNow();
-                })));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
+//    @Test
+//    void testDescribeSingleTopicWithKafkaDown(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
+//        final String topicName = UUID.randomUUID().toString();
+//        String queryReq = "/rest/topics/" + topicName;
+//        deployments.stopKafkaContainer();
+//
+//        createHttpClient(vertx).request(HttpMethod.GET, publishedAdminPort, "localhost", queryReq)
+//                .compose(req -> req.send().onComplete(l -> testContext.verify(() -> {
+//                    if (l.succeeded()) {
+//                        assertThat(l.result().statusCode()).isEqualTo(ReturnCodes.KAFKA_DOWN.code);
+//                        assertStrictTransportSecurityDisabled(l.result(), testContext);
+//                    }
+//                    testContext.completeNow();
+//                })).onFailure(testContext::failNow));
+//        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
+//    }
+
+    @Test
+    void testDescribeNonExistingTopic() throws Exception {
+        given()
+            .log().ifValidationFails()
+        .when()
+            .get(TopicUtils.TOPIC_PATH, "nosuchtopic-" + UUID.randomUUID().toString())
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.NOT_FOUND.getStatusCode());
     }
 
     @Test
-    void testDescribeSingleTopicWithKafkaDown(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
+    void testCreateTopic() {
+        String topicName = UUID.randomUUID().toString();
+        int numPartitions = 3;
+        String minInSyncReplicas = "1";
+
+        given()
+            .body(TopicUtils.buildNewTopicRequest(topicName, numPartitions, Map.of("min.insync.replicas", minInSyncReplicas)).toString())
+            .contentType(ContentType.JSON)
+            .log().ifValidationFails()
+        .when()
+            .post(TopicUtils.TOPIC_COLLECTION_PATH)
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.CREATED.getStatusCode())
+        .assertThat()
+            .header("Location", equalTo("/rest/topics/" + topicName))
+            .body("name", equalTo(topicName))
+            .body("isInternal", equalTo(false))
+            .body("partitions.size()", equalTo(numPartitions))
+            .body("config.find { it.key == 'min.insync.replicas' }.value", equalTo(minInSyncReplicas));
+    }
+
+//    @Test
+//    void testCreateTopicWithKafkaDown(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws InterruptedException {
+//        Types.NewTopic topic = RequestUtils.getTopicObject(3);
+//        deployments.stopKafkaContainer();
+//
+//        createHttpClient(vertx).request(HttpMethod.POST, publishedAdminPort, "localhost", "/rest/topics")
+//                .compose(req -> req.putHeader("content-type", "application/json")
+//                        .send(MODEL_DESERIALIZER.serializeBody(topic)).onComplete(l -> testContext.verify(() -> {
+//                            if (l.succeeded()) {
+//                                assertThat(l.result().statusCode()).isEqualTo(ReturnCodes.KAFKA_DOWN.code);
+//                                assertStrictTransportSecurityDisabled(l.result(), testContext);
+//                            }
+//                            testContext.completeNow();
+//                        })).onFailure(testContext::failNow));
+//        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
+//    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {
+        "{./as}",
+        "{ \"name\": \"name_ok\", \"numPartitions\": \"not_a_number\" }",
+        "{{ \"name\": \"name_ok\", \"numPartitions\": 1 }", // extra opening brace
+    })
+    void testCreateTopicWithInvalidJson(String invalidJson) throws InterruptedException {
+        given()
+            .body(invalidJson)
+            .contentType(ContentType.JSON)
+            .log().ifValidationFails()
+        .when()
+            .post(TopicUtils.TOPIC_COLLECTION_PATH)
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.BAD_REQUEST.getStatusCode())
+        .assertThat()
+            .body("code", equalTo(Status.BAD_REQUEST.getStatusCode()))
+            .body("error_message", notNullValue());
+
+        topicUtils.assertNoTopicsExist();
+    }
+
+    @Test
+    void testCreateTopicWithInvalidName() {
+        given()
+            .body(TopicUtils.buildNewTopicRequest("testTopic3_9-=", 3, Collections.emptyMap()).toString())
+            .contentType(ContentType.JSON)
+            .log().ifValidationFails()
+        .when()
+            .post(TopicUtils.TOPIC_COLLECTION_PATH)
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.BAD_REQUEST.getStatusCode())
+        .assertThat()
+            .body("code", equalTo(Status.BAD_REQUEST.getStatusCode()))
+            .body("error_message", notNullValue());
+
+        topicUtils.assertNoTopicsExist();
+    }
+
+    @Test
+    void testCreateFaultTopic() {
+        given()
+            // Invalid value for configuration cleanup.policy: String must be one of: compact, delete
+            .body(TopicUtils.buildNewTopicRequest(UUID.randomUUID().toString(), 3, Map.of("cleanup.policy", "true")).toString())
+            .contentType(ContentType.JSON)
+            .log().ifValidationFails()
+        .when()
+            .post(TopicUtils.TOPIC_COLLECTION_PATH)
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.BAD_REQUEST.getStatusCode())
+        .assertThat()
+            .body("code", equalTo(Status.BAD_REQUEST.getStatusCode()))
+            .body("error_message", notNullValue());
+
+        topicUtils.assertNoTopicsExist();
+    }
+
+    @Test
+    void testCreateDuplicatedTopic() {
         final String topicName = UUID.randomUUID().toString();
-        String queryReq = "/rest/topics/" + topicName;
-        deployments.stopKafkaContainer();
+        final int numPartitions = 2;
+        topicUtils.createTopics(List.of(topicName), numPartitions, Status.CREATED);
 
-        createHttpClient(vertx).request(HttpMethod.GET, publishedAdminPort, "localhost", queryReq)
-                .compose(req -> req.send().onComplete(l -> testContext.verify(() -> {
-                    if (l.succeeded()) {
-                        assertThat(l.result().statusCode()).isEqualTo(ReturnCodes.KAFKA_DOWN.code);
-                        assertStrictTransportSecurityDisabled(l.result(), testContext);
-                    }
-                    testContext.completeNow();
-                })).onFailure(testContext::failNow));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
+        given()
+            .body(TopicUtils.buildNewTopicRequest(topicName, 1, Collections.emptyMap()).toString())
+            .contentType(ContentType.JSON)
+            .log().ifValidationFails()
+        .when()
+            .post(TopicUtils.TOPIC_COLLECTION_PATH)
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.CONFLICT.getStatusCode())
+        .assertThat()
+            .body("code", equalTo(Status.CONFLICT.getStatusCode()))
+            .body("error_message", notNullValue());
     }
 
-    @Test
-    void testDescribeNonExistingTopic(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
-        final String topicName = "test-non-exist";
-
-        String queryReq = "/rest/topics/" + topicName;
-        createHttpClient(vertx).request(HttpMethod.GET, publishedAdminPort, "localhost", queryReq)
-                .compose(req -> req.send().onSuccess(response -> {
-                    if (response.statusCode() !=  ReturnCodes.NOT_FOUND.code) {
-                        testContext.failNow("Status code not correct");
-                    }
-                    assertStrictTransportSecurityDisabled(response, testContext);
-                    testContext.completeNow();
-                }).onFailure(testContext::failNow));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
-    }
-
-    @Test
-    void testCreateTopic(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws InterruptedException {
-        Types.NewTopic topic = RequestUtils.getTopicObject(3);
-
-        createHttpClient(vertx).request(HttpMethod.POST, publishedAdminPort, "localhost", "/rest/topics")
-                .compose(req -> req.putHeader("content-type", "application/json")
-                        .send(MODEL_DESERIALIZER.serializeBody(topic)).onSuccess(response -> {
-                            if (response.statusCode() !=  ReturnCodes.TOPIC_CREATED.code) {
-                                testContext.failNow("Status code " + response.statusCode() + " is not correct");
-                            }
-                            assertStrictTransportSecurityDisabled(response, testContext);
-                        }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
-                .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
-                    assertThat(testContext.failed()).isFalse();
-                    DynamicWait.waitForTopicExists(topic.getName(), kafkaClient);
-                    TopicDescription description = kafkaClient.describeTopics(Collections.singleton(topic.getName()))
-                            .all().get().get(topic.getName());
-                    assertThat(description.isInternal()).isEqualTo(false);
-                    assertThat(description.partitions().size()).isEqualTo(3);
-                    testContext.completeNow();
-                })));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
-    }
-
-    @Test
-    void testCreateTopicWithKafkaDown(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws InterruptedException {
-        Types.NewTopic topic = RequestUtils.getTopicObject(3);
-        deployments.stopKafkaContainer();
-
-        createHttpClient(vertx).request(HttpMethod.POST, publishedAdminPort, "localhost", "/rest/topics")
-                .compose(req -> req.putHeader("content-type", "application/json")
-                        .send(MODEL_DESERIALIZER.serializeBody(topic)).onComplete(l -> testContext.verify(() -> {
-                            if (l.succeeded()) {
-                                assertThat(l.result().statusCode()).isEqualTo(ReturnCodes.KAFKA_DOWN.code);
-                                assertStrictTransportSecurityDisabled(l.result(), testContext);
-                            }
-                            testContext.completeNow();
-                        })).onFailure(testContext::failNow));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
-    }
-
-    @Test
-    void testCreateWithInvJson(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws InterruptedException {
-        Types.NewTopic topic = RequestUtils.getTopicObject(3);
-
-        createHttpClient(vertx).request(HttpMethod.POST, publishedAdminPort, "localhost", "/rest/topics")
-                .compose(req -> req.putHeader("content-type", "application/json")
-                        .send(MODEL_DESERIALIZER.serializeBody(topic) + "{./as}").onSuccess(response -> {
-                            if (response.statusCode() !=  ReturnCodes.FAILED_REQUEST.code) {
-                                testContext.failNow("Status code " + response.statusCode() + " is not correct");
-                            }
-                            assertStrictTransportSecurityDisabled(response, testContext);
-                            testContext.completeNow();
-                        }).onFailure(testContext::failNow));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
-    }
-
-    @Test
-    void testCreateWithInvJson2(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws InterruptedException {
-        Types.NewTopic topic = RequestUtils.getTopicObject(3);
-
-        createHttpClient(vertx).request(HttpMethod.POST, publishedAdminPort, "localhost", "/rest/topics")
-                .compose(req -> req.putHeader("content-type", "application/json")
-                        .send("{" + MODEL_DESERIALIZER.serializeBody(topic)).onSuccess(response -> {
-                            if (response.statusCode() !=  ReturnCodes.FAILED_REQUEST.code) {
-                                testContext.failNow("Status code " + response.statusCode() + " is not correct");
-                            }
-                            assertStrictTransportSecurityDisabled(response, testContext);
-                            testContext.completeNow();
-                        }).onFailure(testContext::failNow));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
-    }
-
-    @Test
-    void testCreateTopicWithInvName(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws InterruptedException {
-        final String topicName = "testTopic3_9-=";
-        Types.NewTopic topic = RequestUtils.getTopicObject(topicName, 3);
-
-        createHttpClient(vertx).request(HttpMethod.POST, publishedAdminPort, "localhost", "/rest/topics")
-                .compose(req -> req.putHeader("content-type", "application/json")
-                        .send(MODEL_DESERIALIZER.serializeBody(topic)).onSuccess(response -> {
-                            if (response.statusCode() !=  ReturnCodes.FAILED_REQUEST.code) {
-                                testContext.failNow("Status code " + response.statusCode() + " is not correct");
-                            }
-                            assertStrictTransportSecurityDisabled(response, testContext);
-                            testContext.completeNow();
-                        }).onFailure(testContext::failNow));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
-    }
-
-    @Test
-    void testCreateFaultTopic(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws InterruptedException {
+    @ParameterizedTest
+    @ValueSource(ints = { -1, 0, KafkaUnsecuredResourceManager.EXCESSIVE_PARTITIONS })
+    void testCreateTopicWithInvalidNumPartitions(int numPartitions) throws InterruptedException {
         final String topicName = UUID.randomUUID().toString();
-        final String configKey = "cleanup.policy";
-        Types.NewTopic topic = new Types.NewTopic();
-        topic.setName(topicName);
-        Types.NewTopicInput input = new Types.NewTopicInput();
-        Types.NewTopicConfigEntry conf = new Types.NewTopicConfigEntry();
-        conf.setKey(configKey);
-        conf.setValue("true");
-        input.setConfig(Collections.singletonList(conf));
-        topic.setSettings(input);
 
+        given()
+            .body(TopicUtils.buildNewTopicRequest(topicName, numPartitions, Collections.emptyMap()).toString())
+            .contentType(ContentType.JSON)
+            .log().ifValidationFails()
+        .when()
+            .post(TopicUtils.TOPIC_COLLECTION_PATH)
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.BAD_REQUEST.getStatusCode())
+        .assertThat()
+            .body("code", equalTo(Status.BAD_REQUEST.getStatusCode()))
+            .body("error_message", notNullValue());
 
-        createHttpClient(vertx).request(HttpMethod.POST, publishedAdminPort, "localhost", "/rest/topics")
-                .compose(req -> req.putHeader("content-type", "application/json")
-                        .send(MODEL_DESERIALIZER.serializeBody(topic)).onSuccess(response -> {
-                            if (response.statusCode() !=  ReturnCodes.FAILED_REQUEST.code) {
-                                testContext.failNow("Status code " + response.statusCode() + " is not correct");
-                            }
-                            assertStrictTransportSecurityDisabled(response, testContext);
-                        }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
-                .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
-                    assertThat(testContext.failed()).isFalse();
-                    assertThat(kafkaClient.listTopics().names().get()).doesNotContain(topic.getName());
-                    testContext.completeNow();
-                })));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
+        topicUtils.assertNoTopicsExist();
     }
 
     @Test
-    void testCreateDuplicatedTopic(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
-        Types.NewTopic topic = RequestUtils.getTopicObject(2);
-
-        kafkaClient.createTopics(Collections.singletonList(
-                new NewTopic(topic.getName(), 2, (short) 1)
-        ));
-        DynamicWait.waitForTopicExists(topic.getName(), kafkaClient);
-        createHttpClient(vertx).request(HttpMethod.POST, publishedAdminPort, "localhost", "/rest/topics")
-                .compose(req -> req.putHeader("content-type", "application/json")
-                        .send(MODEL_DESERIALIZER.serializeBody(topic)).onSuccess(response -> {
-                            if (response.statusCode() !=  ReturnCodes.DUPLICATED.code) {
-                                testContext.failNow("Status code " + response.statusCode() + " is not correct");
-                            }
-                            assertStrictTransportSecurityDisabled(response, testContext);
-                            testContext.completeNow();
-                        }).onFailure(testContext::failNow));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
-    }
-
-    @ParameterizedTest(name = "{displayName}-{0}")
-    @ValueSource(ints = { 0, 101 })
-    void testCreateTopicWithInvalidNumPartitions(int numPartitions, Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws InterruptedException {
-        Types.NewTopic topic = RequestUtils.getTopicObject(numPartitions);
-
-        createHttpClient(vertx).request(HttpMethod.POST, publishedAdminPort, "localhost", "/rest/topics")
-                .compose(req -> req.putHeader("content-type", "application/json")
-                        .send(MODEL_DESERIALIZER.serializeBody(topic)).onSuccess(response -> {
-                            if (response.statusCode() !=  ReturnCodes.FAILED_REQUEST.code) {
-                                testContext.failNow("Status code " + response.statusCode() + " is not correct");
-                            }
-                            assertStrictTransportSecurityDisabled(response, testContext);
-                        }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
-                .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
-                    assertThat(testContext.failed()).isFalse();
-                    assertThat(kafkaClient.listTopics().names().get()).doesNotContain(topic.getName());
-                    testContext.completeNow();
-                })));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
-    }
-
-    @Test
-    void testTopicDeleteSingle(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
+    void testTopicDeleteSingle() {
         final String topicName = UUID.randomUUID().toString();
-        String query = "/rest/topics/" + topicName;
+        topicUtils.createTopics(List.of(topicName), 2, Status.CREATED);
 
-        kafkaClient.createTopics(Collections.singletonList(
-                new NewTopic(topicName, 2, (short) 1)
-        ));
-        DynamicWait.waitForTopicExists(topicName, kafkaClient);
-        createHttpClient(vertx).request(HttpMethod.DELETE, publishedAdminPort, "localhost", query)
-                .compose(req -> req.putHeader("content-type", "application/json")
-                        .send().onSuccess(response -> {
-                            if (response.statusCode() !=  ReturnCodes.SUCCESS.code) {
-                                testContext.failNow("Status code " + response.statusCode() + " is not correct");
-                            }
-                            assertStrictTransportSecurityDisabled(response, testContext);
-                        }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
-                .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
-                    assertThat(testContext.failed()).isFalse();
-                    DynamicWait.waitForTopicToBeDeleted(topicName, kafkaClient);
-                    assertThat(kafkaClient.listTopics().names().get()).doesNotContain(topicName);
-                    testContext.completeNow();
-                })));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
+        given()
+            .log().ifValidationFails()
+        .when()
+            .delete(TopicUtils.TOPIC_PATH, topicName)
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.OK.getStatusCode());
+
+        topicUtils.assertNoTopicsExist();
+    }
+
+//    @Test
+//    void testTopicDeleteWithKafkaDown(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
+//        final String topicName = UUID.randomUUID().toString();
+//        String query = "/rest/topics/" + topicName;
+//        deployments.stopKafkaContainer();
+//
+//        createHttpClient(vertx).request(HttpMethod.DELETE, publishedAdminPort, "localhost", query)
+//                .compose(req -> req.putHeader("content-type", "application/json")
+//                        .send().onComplete(l -> testContext.verify(() -> {
+//                            if (l.succeeded()) {
+//                                assertThat(l.result().statusCode()).isEqualTo(ReturnCodes.KAFKA_DOWN.code);
+//                            }
+//                            assertStrictTransportSecurityDisabled(l.result(), testContext);
+//                            testContext.completeNow();
+//                        })).onFailure(testContext::failNow));
+//        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
+//    }
+
+    @Test
+    void testTopicDeleteNotExisting() {
+        given()
+            .log().ifValidationFails()
+        .when()
+            .delete(TopicUtils.TOPIC_PATH, "nosuchtopic-" + UUID.randomUUID().toString())
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.NOT_FOUND.getStatusCode())
+        .assertThat()
+            .body("code", equalTo(Status.NOT_FOUND.getStatusCode()))
+            .body("error_message", notNullValue());
+
+        topicUtils.assertNoTopicsExist();
     }
 
     @Test
-    void testTopicDeleteWithKafkaDown(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
+    void testUpdateTopic() {
         final String topicName = UUID.randomUUID().toString();
-        String query = "/rest/topics/" + topicName;
-        deployments.stopKafkaContainer();
+        final int numPartitions = 2;
 
-        createHttpClient(vertx).request(HttpMethod.DELETE, publishedAdminPort, "localhost", query)
-                .compose(req -> req.putHeader("content-type", "application/json")
-                        .send().onComplete(l -> testContext.verify(() -> {
-                            if (l.succeeded()) {
-                                assertThat(l.result().statusCode()).isEqualTo(ReturnCodes.KAFKA_DOWN.code);
-                            }
-                            assertStrictTransportSecurityDisabled(l.result(), testContext);
-                            testContext.completeNow();
-                        })).onFailure(testContext::failNow));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
+        topicUtils.createTopics(List.of(topicName), numPartitions, Status.CREATED);
+
+        // Original value is "1" by `createTopics`
+        String minInSyncReplicas = "2";
+
+        given()
+            .body(TopicUtils.buildUpdateTopicRequest(topicName, numPartitions, Map.of("min.insync.replicas", minInSyncReplicas)).toString())
+            .contentType(ContentType.JSON)
+            .log().ifValidationFails()
+        .when()
+            .patch(TopicUtils.TOPIC_PATH, topicName)
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.OK.getStatusCode())
+        .assertThat()
+            .body("name", equalTo(topicName))
+            .body("isInternal", equalTo(false))
+            .body("partitions.size()", equalTo(numPartitions))
+            .body("config.find { it.key == 'min.insync.replicas' }.value", equalTo(minInSyncReplicas));
     }
 
-    @Test
-    void testTopicDeleteNotExisting(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws InterruptedException {
-        final String topicName = "test-topic-non-existing";
-        String query = "/rest/topics/" + topicName;
-        createHttpClient(vertx).request(HttpMethod.DELETE, publishedAdminPort, "localhost", query)
-                .compose(req -> req.putHeader("content-type", "application/json")
-                        .send().onSuccess(response -> {
-                            if (response.statusCode() !=  ReturnCodes.NOT_FOUND.code) {
-                                testContext.failNow("Status code " + response.statusCode() + " is not correct");
-                            }
-                            assertStrictTransportSecurityDisabled(response, testContext);
-                            testContext.completeNow();
-                        }).onFailure(testContext::failNow));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
+//    @Test
+//    void testUpdateTopicWithKafkaDown(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws InterruptedException {
+//        final String topicName = UUID.randomUUID().toString();
+//        final String configKey = "min.insync.replicas";
+//        Types.Topic topic1 = new Types.Topic();
+//        topic1.setName(topicName);
+//        Types.ConfigEntry conf = new Types.ConfigEntry();
+//        conf.setKey(configKey);
+//        conf.setValue("2");
+//        topic1.setConfig(Collections.singletonList(conf));
+//        deployments.stopKafkaContainer();
+//
+//        createHttpClient(vertx).request(HttpMethod.PATCH, publishedAdminPort, "localhost", "/rest/topics/" + topicName)
+//                .compose(req -> req.putHeader("content-type", "application/json")
+//                        .send(MODEL_DESERIALIZER.serializeBody(topic1)).onSuccess(response -> {
+//                            if (response.statusCode() !=  ReturnCodes.KAFKA_DOWN.code) {
+//                                testContext.failNow("Status code " + response.statusCode() + " is not correct");
+//                            }
+//                            assertStrictTransportSecurityDisabled(response, testContext);
+//                            testContext.completeNow();
+//                        }).onFailure(testContext::failNow));
+//        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
+//    }
 
-    }
-
     @Test
-    void testUpdateTopic(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
+    void testIncreaseTopicPartitions() {
         final String topicName = UUID.randomUUID().toString();
-        final String configKey = "min.insync.replicas";
-        Types.Topic topic1 = new Types.Topic();
-        topic1.setName(topicName);
-        Types.ConfigEntry conf = new Types.ConfigEntry();
-        conf.setKey(configKey);
-        conf.setValue("2");
-        topic1.setConfig(Collections.singletonList(conf));
+        final int originalNumPartitions = 1;
+        final int updatedNumPartitions = 3;
 
-        kafkaClient.createTopics(Collections.singletonList(
-                new NewTopic(topicName, 1, (short) 1)
-        ));
-        DynamicWait.waitForTopicExists(topicName, kafkaClient);
-        createHttpClient(vertx).request(HttpMethod.PATCH, publishedAdminPort, "localhost", "/rest/topics/" + topicName)
-                .compose(req -> req.putHeader("content-type", "application/json")
-                        .send(MODEL_DESERIALIZER.serializeBody(topic1)).onSuccess(response -> {
-                            if (response.statusCode() !=  ReturnCodes.SUCCESS.code) {
-                                testContext.failNow("Status code " + response.statusCode() + " is not correct");
-                            }
-                            assertStrictTransportSecurityDisabled(response, testContext);
-                        }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
-                .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
-                    assertThat(testContext.failed()).isFalse();
-                    DynamicWait.waitForTopicExists(topicName, kafkaClient);
-                    ConfigResource resource = new ConfigResource(org.apache.kafka.common.config.ConfigResource.Type.TOPIC,
-                            topicName);
-                    String configVal = kafkaClient.describeConfigs(Collections.singletonList(resource))
-                            .all().get().get(resource).get("min.insync.replicas").value();
-                    assertThat(configVal).isEqualTo("2");
-                    testContext.completeNow();
-                })));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
+        topicUtils.createTopics(List.of(topicName), originalNumPartitions, Status.CREATED);
+
+        // Original value is "1" by `createTopics`
+        String minInSyncReplicas = "2";
+
+        given()
+            .body(TopicUtils.buildUpdateTopicRequest(topicName, updatedNumPartitions, Map.of("min.insync.replicas", minInSyncReplicas)).toString())
+            .contentType(ContentType.JSON)
+            .log().ifValidationFails()
+        .when()
+            .patch(TopicUtils.TOPIC_PATH, topicName)
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.OK.getStatusCode())
+        .assertThat()
+            .body("name", equalTo(topicName))
+            .body("isInternal", equalTo(false))
+            .body("partitions.size()", equalTo(updatedNumPartitions))
+            .body("config.find { it.key == 'min.insync.replicas' }.value", equalTo(minInSyncReplicas));
     }
 
     @Test
-    void testUpdateTopicWithKafkaDown(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws InterruptedException {
+    void testDecreaseTopicPartitions() throws Exception {
         final String topicName = UUID.randomUUID().toString();
-        final String configKey = "min.insync.replicas";
-        Types.Topic topic1 = new Types.Topic();
-        topic1.setName(topicName);
-        Types.ConfigEntry conf = new Types.ConfigEntry();
-        conf.setKey(configKey);
-        conf.setValue("2");
-        topic1.setConfig(Collections.singletonList(conf));
-        deployments.stopKafkaContainer();
+        final int originalNumPartitions = 3;
+        final int updatedNumPartitions = 2;
 
-        createHttpClient(vertx).request(HttpMethod.PATCH, publishedAdminPort, "localhost", "/rest/topics/" + topicName)
-                .compose(req -> req.putHeader("content-type", "application/json")
-                        .send(MODEL_DESERIALIZER.serializeBody(topic1)).onSuccess(response -> {
-                            if (response.statusCode() !=  ReturnCodes.KAFKA_DOWN.code) {
-                                testContext.failNow("Status code " + response.statusCode() + " is not correct");
-                            }
-                            assertStrictTransportSecurityDisabled(response, testContext);
-                            testContext.completeNow();
-                        }).onFailure(testContext::failNow));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
+        topicUtils.createTopics(List.of(topicName), originalNumPartitions, Status.CREATED);
+
+        given()
+            .body(TopicUtils.buildUpdateTopicRequest(topicName, updatedNumPartitions, Collections.emptyMap()).toString())
+            .contentType(ContentType.JSON)
+            .log().ifValidationFails()
+        .when()
+            .patch(TopicUtils.TOPIC_PATH, topicName)
+        .then()
+            .log().ifValidationFails()
+            .statusCode(Status.BAD_REQUEST.getStatusCode())
+        .assertThat()
+            .body("code", equalTo(Status.BAD_REQUEST.getStatusCode()))
+            .body("error_message", notNullValue());
     }
 
     @Test
-    void testIncreaseTopicPartitions(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
-        final String topicName = UUID.randomUUID().toString();
-        final String configKey = "min.insync.replicas";
-        Types.UpdatedTopic topic1 = new Types.UpdatedTopic();
-        topic1.setName(topicName);
-        Types.NewTopicConfigEntry conf = new Types.NewTopicConfigEntry();
-        conf.setKey(configKey);
-        conf.setValue("2");
-        topic1.setConfig(Collections.singletonList(conf));
-        topic1.setNumPartitions(3);
-
-        kafkaClient.createTopics(Collections.singletonList(
-                new NewTopic(topicName, 1, (short) 1)
-        ));
-        DynamicWait.waitForTopicExists(topicName, kafkaClient);
-        createHttpClient(vertx).request(HttpMethod.PATCH, publishedAdminPort, "localhost", "/rest/topics/" + topicName)
-                .compose(req -> req.putHeader("content-type", "application/json")
-                        .send(MODEL_DESERIALIZER.serializeBody(topic1)).onSuccess(response -> {
-                            if (response.statusCode() !=  ReturnCodes.SUCCESS.code) {
-                                testContext.failNow("Status code " + response.statusCode() + " is not correct");
-                            }
-                            assertStrictTransportSecurityDisabled(response, testContext);
-                        }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
-                .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
-                    assertThat(testContext.failed()).isFalse();
-                    DynamicWait.waitForTopicExists(topicName, kafkaClient);
-                    ConfigResource resource = new ConfigResource(org.apache.kafka.common.config.ConfigResource.Type.TOPIC,
-                            topicName);
-                    String configVal = kafkaClient.describeConfigs(Collections.singletonList(resource))
-                            .all().get().get(resource).get("min.insync.replicas").value();
-                    assertThat(configVal).isEqualTo("2");
-                    int partitions = kafkaClient.describeTopics(Collections.singletonList(topicName)).all().get().get(topicName).partitions().size();
-                    assertThat(partitions).isEqualTo(3);
-                    testContext.completeNow();
-                })));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
+    void testOptionsRequestIncludesTwoHourMaxAge() {
+        given()
+            .header("Origin", "http://localhost")
+            .header("Access-Control-Request-Method", "POST")
+            .log().ifValidationFails()
+            .when()
+                .options(TopicUtils.TOPIC_COLLECTION_PATH)
+            .then()
+                .log().ifValidationFails()
+                .statusCode(Status.OK.getStatusCode())
+            .assertThat()
+                .header("Access-Control-Max-Age",
+                        equalTo(String.valueOf(Duration.ofHours(2).toSeconds())));
     }
 
-    @Test
-    void testDecreaseTopicPartitions(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
-        final String topicName = UUID.randomUUID().toString();
-        final String configKey = "min.insync.replicas";
-        Types.UpdatedTopic topic1 = new Types.UpdatedTopic();
-        topic1.setName(topicName);
-        Types.NewTopicConfigEntry conf = new Types.NewTopicConfigEntry();
-        conf.setKey(configKey);
-        conf.setValue("2");
-        topic1.setConfig(Collections.singletonList(conf));
-        topic1.setNumPartitions(1);
-
-        kafkaClient.createTopics(Collections.singletonList(
-                new NewTopic(topicName, 3, (short) 1)
-        ));
-        DynamicWait.waitForTopicExists(topicName, kafkaClient);
-        createHttpClient(vertx).request(HttpMethod.PATCH, publishedAdminPort, "localhost", "/rest/topics/" + topicName)
-                .compose(req -> req.putHeader("content-type", "application/json")
-                        .send(MODEL_DESERIALIZER.serializeBody(topic1)).onSuccess(response -> {
-                            if (response.statusCode() !=  ReturnCodes.FAILED_REQUEST.code) {
-                                testContext.failNow("Status code " + response.statusCode() + " is not correct");
-                            }
-                            assertStrictTransportSecurityDisabled(response, testContext);
-                        }).onFailure(testContext::failNow).compose(HttpClientResponse::body))
-                .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
-                    assertThat(testContext.failed()).isFalse();
-                    testContext.completeNow();
-                })));
-        assertThat(testContext.awaitCompletion(1, TimeUnit.MINUTES)).isTrue();
-    }
-
-    @Test
-    void testOptionsRequestIncludesTwoHourMaxAge(Vertx vertx, VertxTestContext testContext, ExtensionContext extensionContext) throws Exception {
-        Checkpoint resultVerified = testContext.checkpoint();
-
-        createHttpClient(vertx)
-            .request(HttpMethod.OPTIONS, publishedAdminPort, "localhost", "/rest/topics")
-            .map(req -> req.putHeader("Origin", "http://localhost"))
-            .map(req -> req.putHeader("Access-Control-Request-Method", "POST"))
-            .compose(req -> req.send())
-            .map(resp -> {
-                assertThat(resp.statusCode())
-                    .isEqualTo(HttpURLConnection.HTTP_OK); // Quarkus uses 200 with content-length=0 instead of 204
-                assertThat(resp.getHeader("Access-Control-Max-Age"))
-                    .isEqualTo(String.valueOf(Duration.ofHours(2).toSeconds()));
-                resultVerified.flag();
-                return resp;
-            })
-            .onFailure(testContext::failNow);
-    }
 }
